Gnome: Fix low text contrast in calendar events widget

--- a/gtk-3.20/gtk-dark.css
+++ b/gtk-3.20/gtk-dark.css
@@ -5798,6 +5798,13 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   #gnc-id-main-window .arrow.button.toggle:hover {
     border-color: rgba(189, 147, 249, 0.5); }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light label, .color-light.timed label {
+  color: #1e1f29;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
